[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://game/ui/backstory_scene.gd" id="1"]
[ext_resource type="Theme" uid="uid://dq1csyhs1pw1c" path="res://game/ui/steampunk_theme.tres" id="2"]

[sub_resource type="Gradient" id="1"]
colors = PackedColorArray(0.05, 0.04, 0.03, 1, 0.15, 0.12, 0.08, 1)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("1")
fill_from = Vector2(0, 0)
fill_to = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.08, 0.06, 0.04, 0.92)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.48, 0.32, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8
shadow_offset = Vector2(4, 4)

[node name="BackstoryScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="BackgroundLayers" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StoryCard" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="StoryCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0

[node name="Title" type="Label" parent="StoryCard/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.65, 1)
theme_override_font_sizes/font_size = 42
text = "Chapter 1"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="StoryCard/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.7, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "A New Chapter Begins"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="StoryCard/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ScrollContainer" type="ScrollContainer" parent="StoryCard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StoryText" type="RichTextLabel" parent="StoryCard/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
theme_override_colors/default_color = Color(0.9, 0.8, 0.7, 1)
theme_override_font_sizes/normal_font_size = 22
scroll_active = false
fit_content = true
text = "Loading the tale of ages past..."

[node name="Spacer2" type="Control" parent="StoryCard/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ButtonContainer" type="HBoxContainer" parent="StoryCard/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SkipButton" type="Button" parent="StoryCard/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 50)
theme_override_font_sizes/font_size = 18
text = "Skip Tale"

[node name="Spacer" type="Control" parent="StoryCard/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)

[node name="ContinueButton" type="Button" parent="StoryCard/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
theme_override_font_sizes/font_size = 18
text = "Begin Chapter 1"

[node name="TypewriterTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="ParallaxTimer" type="Timer" parent="."]
wait_time = 0.016
